# my-salon-cast

./: .dockerignore  .env.deploy  .env.production.template  .env.staging.template  .env.template  .env.test  .gitignore  ARCHITECTURE.md  AUTHENTICATION.md  DOCKER_TEST.md  Dockerfile  MCP_QUICK_REFERENCE.md  MCP_SETUP_GUIDE.md  OAUTH_DEPLOYMENT_SUMMARY.md  README.md  Run_server_directly.py  SETUP.md  TESTING.md  TODO_remove_sync.md  analyze_async_arch.py  api_documentation.md  api_documentation_v0-1.md  api_documentation_v1.md  check_available_voices.py  cleanup_config.json  cloudbuild.build-only.yaml  cloudbuild.yaml  copy_latest_podcast.py  credential-rotation-log.md  db_password.txt  debug_async_features.py  debug_async_flow.py  debug_health.py  debug_voice_assignment.py  debug_youtube.py  deploy_cors_update.sh  designdoc1-7.md  designdoc1-8.md  detailed_commit_history.txt  detailed_commit_history_2.txt  (+89 more)
app/: audio_utils.py  cleanup_config.py  common_exceptions.py  config.py  content_extractor.py  database.py  db.py  http_utils.py  json_utils.py  llm_service.py  logging_utils.py  main.py  mcp_descriptions.py  mcp_server.py  mcp_utils.py  oauth_config.py  oauth_middleware.py  oauth_models.py  podcast_models.py  podcast_workflow.py  podcast_workflow.py.bak  podcast_workflow_test.py  production_config.py  status_manager.py  storage.py  storage_utils.py  task_runner.py  test_voice_differentiation.py  test_voice_integration.py  tts_service.py  tts_voices_cache.json  validations.py
archive/: CORS_CONFIGURATION.md  agents.md  production_readiness_checklist.md  todo.md  todo_deployment.md
archive_old_tests/: debug_content_extraction.py  debug_health_response.py  direct_test.py  quick_timeout_test.py  run_cancellation_tests.py  run_mcp_tests.py  run_server_directly.py  test_active_health.py  test_app.py  test_async_minimal.py  test_async_podcast.py  test_container_local.py  test_debug_tool.py  test_enhanced_async.py  test_full_health_integration.py  test_gemini_api.py  test_health_via_mcp.py  test_helpers.py  test_job_status_direct.py  test_live_health.py  test_mcp_direct.py  test_mcp_integration.py  test_mcp_persona_resources.py  test_mcp_podcast_resources.py  test_mcp_prompts.py  test_mcp_resources.py  test_outline_registration.py  test_outline_resource.py  test_persona_research_resource.py  test_phase2_3b_logs.py  test_phase2_resources.py  test_podcast_workflow.py  test_server.py  test_signals.py  test_simple_config.py  test_sse_connection.py  test_status_endpoints.py  test_status_simple.py  test_text_storage.py  test_text_storage_simple.py  (+2 more)
docs/: api_documentation.html  chatgpt_customgpt_setup.md  openapi_quick_reference.md  public_api_setup.md
scripts/: Run_server_directly.py  (+8 more)
(+42 files in other folders)
